--- a/web/QReadWeb/auth_app/templates/auth_app/login.html
+++ b/web/QReadWeb/auth_app/templates/auth_app/login.html
@@ -1,1 +1,57 @@
-<h1>Teste Login</h1>
+{% extends 'core/_base.html' %}
+
+{% load static %}
+
+{% block title %}QRead - Login{% endblock title %}
+
+{% block head %}
+    <link rel="stylesheet" href="{% static 'auth_app/css/style.css' %}">
+{% endblock %}
+
+{% block content %}
+    <div class="text-center" id="login-container">
+        <div class="w-100 p-0" id="login-row">
+
+            <div class="" id="login-left">
+                <h1 class="mt-4">Bem vindo ao QRead</h1>
+                <p class="lead">Seu gerador de QR Code gratuito com insights</p>
+                <img src="{% static 'auth_app/images/logo.png' %}" alt="QRead Logo" class="img-fluid">
+            </div>
+            
+            <div class="d-flex align-items-center justify-content-center" id="login-right">
+                <div class="p-3" id="login-card">
+                    <div class="card-body">
+                        <h2 class="card-title">Login</h2>
+                        <form method="post" action="{% url 'login' %}" id="login-form">
+                            {% csrf_token %}
+                            <div class="mb-3">
+                                <label for="username" class="form-label">Usuário</label>
+                                <input type="text" class="form-control" id="username" name="username" required>
+                            </div>
+                            <div class="mb-3">
+                                <label for="password" class="form-label">Senha</label>
+                                <input type="password" class="form-control" id="password" name="password" required>
+                            </div>
+                            <button type="submit" class="btn w-100" id="buttonSubmit">Entrar</button>
+                        </form>
+                        <div class="mt-3">
+                            <p class="text-center">Não tem uma conta? <a href="#">Registrar</a></p>
+                        </div>
+                        {% if messages %}
+                            <div class="mt-3">
+                                {% for message in messages %}
+                                    <div class="alert alert-{{ message.tags }} alert-dismissible fade show" role="alert">
+                                        {{ message }}
+                                        <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+                                    </div>
+                                {% endfor %}
+                            </div>
+                        {% endif %}
+                    </div>
+
+                </div>
+            </div>
+            
+        </div>
+    </div>
+{% endblock %}
