--- a/web/QReadWeb/auth_app/templates/auth_app/login.html
+++ b/web/QReadWeb/auth_app/templates/auth_app/login.html
@@ -22,17 +22,17 @@
                 <div class="p-3" id="login-card">
                     <div class="card-body">
                         <h2 class="card-title">Login</h2>
-                        <form method="post" action="{% url 'login' %}" id="login-form">
+                        <form id="login-form">
                             {% csrf_token %}
                             <div class="mb-3">
-                                <label for="username" class="form-label">Usuário</label>
-                                <input type="text" class="form-control" id="username" name="username" required>
+                                <label for="email" class="form-label">Email</label>
+                                <input type="text" class="form-control" id="email" name="email" required>
                             </div>
                             <div class="mb-3">
                                 <label for="password" class="form-label">Senha</label>
                                 <input type="password" class="form-control" id="password" name="password" required>
                             </div>
-                            <button type="submit" class="btn w-100" id="buttonSubmit">Entrar</button>
+                            <button type="button" class="btn w-100" id="buttonSubmit">Entrar</button>
                         </form>
                         <div class="mt-3">
                             <p class="text-center">Não tem uma conta? <a href="#">Registrar</a></p>
