--- a/web/QReadWeb/core/templates/core/_base.html
+++ b/web/QReadWeb/core/templates/core/_base.html
@@ -63,7 +63,8 @@
     <script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js"></script>
     
     <!-- Scripts Personalizados -->
-     <!-- <script src="{% static 'auth_app/scripts/login.js' %}"></script> -->
+     <script src="{% static 'auth_app/js/login.js' %}"></script>
+
     {% block scripts %}
     {% endblock scripts %}
 </body>
