Finalizacao da implementacao da api de cadastro

--- a/web/QReadWeb/auth_app/static/auth_app/css/style.css
+++ b/web/QReadWeb/auth_app/static/auth_app/css/style.css
@@ -51,7 +51,7 @@
     color: #fff;
 }
 
-#login-form {
+.form-auth {
     color: #fff;
 }
 
@@ -65,7 +65,7 @@
     text-decoration: underline;
 }
 
-#login-form label {
+.form-auth label {
     display: block;
     float: left;
 }
