--- a/web/QReadWeb/auth_app/templates/auth_app/register.html
+++ b/web/QReadWeb/auth_app/templates/auth_app/register.html
@@ -2,7 +2,7 @@
 
 {% load static %}
 
-{% block title %}QRead - Login{% endblock title %}
+{% block title %}QRead - Cadastro{% endblock title %}
 
 {% block head %}
     <link rel="stylesheet" href="{% static 'auth_app/css/style.css' %}">
@@ -11,31 +11,38 @@
 {% block content %}
     <div class="text-center" id="login-container">
         <div class="w-100 p-0" id="login-row">
-
             <div class="" id="login-left">
                 <h1 class="mt-4">Bem vindo ao QRead</h1>
                 <p class="lead">Seu gerador de QR Code gratuito com insights</p>
                 <img src="{% static 'auth_app/images/logo.png' %}" alt="QRead Logo" class="img-fluid">
             </div>
-            
+
             <div class="d-flex align-items-center justify-content-center" id="login-right">
                 <div class="p-3" id="login-card">
                     <div class="card-body">
-                        <h2 class="card-title">Login</h2>
-                        <form id="login-form" class="form-auth">
+                        <h2 class="card-title">Cadastrar-se</h2>
+                        <form method="post" id="register-form" class="form-auth">
                             {% csrf_token %}
                             <div class="mb-3">
                                 <label for="email" class="form-label">Email</label>
-                                <input type="text" class="form-control" id="email" name="email" required>
+                                <input type="email" class="form-control" placeholder="Digite seu email" id="email" name="email" required>
+                            </div>
+                            <div class="mb-3">
+                                <label for="username" class="form-label">Username</label>
+                                <input type="text" placeholder="Digite seu nome de usuário" class="form-control" id="username" name="username" required>
                             </div>
                             <div class="mb-3">
                                 <label for="password" class="form-label">Senha</label>
-                                <input type="password" class="form-control" id="password" name="password" required>
+                                <input type="password" placeholder="Digite sua senha" class="form-control" id="password" name="password" required>
                             </div>
-                            <button type="button" class="btn w-100 mt-3" id="buttonSubmit">Entrar</button>
+                            <div class="mb-3">
+                                <label for="password" class="form-label">Confirmar senha</label>
+                                <input type="password" placeholder="Confirme sua senha" class="form-control" id="password" name="password" required>
+                            </div>
+                            <button type="submit" class="btn w-100 mt-3" id="buttonSubmit">Cadastrar</button>
                         </form>
                         <div class="mt-3">
-                            <p class="text-center">Não tem uma conta? <a href="{% url 'register' %}">Cadastre-se</a></p>
+                            <p class="text-center">Já tem uma conta? <a href="{% url 'login' %}">Entrar</a></p>
                         </div>
                         {% if messages %}
                             <div class="mt-3">
@@ -48,10 +55,8 @@
                             </div>
                         {% endif %}
                     </div>
-
                 </div>
             </div>
-            
         </div>
     </div>
 {% endblock %}
