--- a/web/QReadWeb/core/templates/core/layout/sidebar.html
+++ b/web/QReadWeb/core/templates/core/layout/sidebar.html
@@ -6,27 +6,27 @@
     </div>
     <ul class="nav flex-column">
         <li class="nav-item">
-            <a class="nav-link active" href="#">
+            <a class="nav-link active" href="{% url 'core:dashboard' %}">
                 <i class="bi bi-house"></i> Início
             </a>
         </li>
         <li class="nav-item">
-            <a class="nav-link" href="#">
+            <a class="nav-link" href="{% url 'core:dashboard' %}">
                 <i class="bi bi-speedometer2"></i> Dashboard
             </a>
         </li>
         <li class="nav-item">
-            <a class="nav-link" href="#">
+            <a class="nav-link" href="{% url 'core:perfil' %}">
                 <i class="bi bi-person"></i> Perfil
             </a>
         </li>
         <li class="nav-item">
-            <a class="nav-link" href="#">
+            <a class="nav-link" href="{% url 'core:configuracoes' %}">
                 <i class="bi bi-gear"></i> Configurações
             </a>
         </li>
         <li class="nav-item">
-            <a class="nav-link" href="#">
+            <a class="nav-link" href="{% url 'core:sair' %}">
                 <i class="bi bi-box-arrow-right"></i> Sair
             </a>
         </li>
